# splunk-security-baseline-objects-example

./: .gitignore  CONTRIBUTING.md  DATA_SOURCE_VALIDATION_EXAMPLES.md  EXAMPLES.md  HANDLEBARS_GUIDE.md  QUICKSTART.md  README.md  WORKING_EXAMPLE.md  data_source_validation_example.json  example_config.json  palo_alto_example.json  pyproject.toml  test_config.json
dashboards/threat-hunting/: network_anomaly_detection.xml  savedsearches.conf
data-models/: README.md
docs/: cloud-deployment.md  contributing-dashboards.md  contributing-data-models.md  contributing-knowledge-objects.md  on-premises-deployment.md
environment-management/: README.md
environment-management/configs/: deployment.conf
environment-management/scripts/: create-dashboard.py  create-dashboard.sh  deploy.sh  init-environment.sh  sync-baseline.sh
environments/: README.md
environments/baseline/config/: environment.conf
environments/baseline/dashboards/: README.md
environments/baseline/dashboards/overview/: security_operations_center.xml
environments/baseline/examples/external_integrations/: soar_integration.py
environments/baseline/examples/palo_alto_firewall_example/: props.conf  transforms.conf
environments/baseline/knowledge-objects/lookups/: threat_indicators.csv
environments/baseline/knowledge-objects/tags/: security_tags.conf
environments/baseline/templates/: ta_metadata_template.json
environments/development/config/: environment.conf
environments/development/overrides/knowledge-objects/lookups/: asset_inventory.csv
environments/production/config/: environment.conf
examples/external_integrations/: threat_intel_api.py
knowledge-objects/: README.md
knowledge-objects/eventtypes/: security_eventtypes.conf
knowledge-objects/lookups/: asset_inventory.csv
knowledge-objects/macros/: security_macros.conf
src/splunk_ta_repo/: __init__.py  cli.py  dashboard_generator.py  deploy.py  exceptions.py  template_engine.py  template_validator.py
templates/: dashboard_template.xml
templates/dashboard-templates/: README.md  cim_compliance.json  data_source_validation.json  data_source_validation.json.hbs  expected_data_sources.csv  security_basic.json.hbs  simple_data_validation.json  streams_monitoring.json
tests/: test_dashboard_generator.py  test_template_engine.py
(+2 files in other folders)
