[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-ta-repo"
version = "1.0.0"
description = "Splunk Technical Add-on Repository Template with Dashboard Generation"
authors = [{name = "Security Engineering Team"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["splunk", "security", "dashboards", "templates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]

dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
create-dashboard = "splunk_ta_repo.cli:main"
splunk-ta-deploy = "splunk_ta_repo.deploy:main"

[project.urls]
Homepage = "https://github.com/your-org/splunk-ta-repo"
Documentation = "https://github.com/your-org/splunk-ta-repo/docs"
Repository = "https://github.com/your-org/splunk-ta-repo"
"Bug Tracker" = "https://github.com/your-org/splunk-ta-repo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/splunk_ta_repo"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--cov=src/splunk_ta_repo",
    "--cov-report=term-missing",
    "--cov-report=html",
]